# OOP_Help

./: .gitignore  README.md
lab2/: CMakeLists.txt  menu.cpp  menu.h  taxpayer.cpp  taxpayer.h
lab2/lab2/: CMakeLists.txt  taxpayer.cpp  taxpayer.h
lab3/: CMakeLists.txt  main.cpp  menu.cpp  menu.h  taxpayer.cpp  taxpayer.h
